--- a/templates/signup.html
+++ b/templates/signup.html
@@ -34,7 +34,7 @@
                 <input type="text" name="username" placeholder="Username" />
                 <input type="password" name="password" placeholder="Password" />
                 <input type="password" name="password2" placeholder="Repeat Password" />
-                <button style="color:white" type="submit" class="signup-btn">Get Started ></button>
+                <button style="color:white" type="submit" class="signup-btn">Get Started</button>
             </form>
             <div class="help-text" align="center">
                 <span>Ready to watch? Enter your email to create or restart your membership.</span>
